--- a/Лаба2.html
+++ b/Лаба2.html
@@ -38,6 +38,7 @@
             <div class = 'header'>
                 <a href = 'Лаба2.html'>Основная страница</a>
                 <a href = 'page2.html'>Позиционирование элементов</a>
+                <a href = 'table.html'>Таблица</a>
 
             </div>
 
