--- a/Лаба.html
+++ b/Лаба.html
@@ -17,6 +17,7 @@
     </style>
 </head>
 <body>
+    <a href = 'table.html'>Таблица</a>
     <img  src = 'image/scale_1200.jpeg' alt = 'Котик'>
     <h1>О себе</h1>
 
