--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class = 'header'>
-
+        <a href = 'table.html'>Таблица</a>
         <a href = "Лаба2.html">Основная страница</a>
         <a href = "page2.html">asdasd</a>
     </div>
